--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
   <body>
     <header class="page-header">
-    <div class="container">почта: romeo.lts.1994@gmail.com<br>
-      номер: +48577586212
+    <div class="container">
+      <a href="mailto:romeo.lts.1994@gmail.com" class="header-email"> romeo.lts.1994@gmail.com</a>
+     <a href="tel:+48577586212" class="header-phone">  +48577586212</a>
     </div>
     
     
@@ -24,6 +25,9 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография Романа">
+      </figure>
       <h3>Учюсь верстать</h3>
       <p>Сижу на карантине, изучаю новую для себя професию.</p>
       <h3>Чем могу быть полезен</h3>
@@ -32,16 +36,20 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
-
+      <p>Мой первый сайт.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section>
 
     <footer class="page-footer">
-      Контакты: +48577586212<br>romeo.lts.1994@gmail.com
+      Контакты: 
+      <a class="footer-phone" href="tel:+48577586212">+48577586212</a> 
+      <a class="footer-email" href="mailto:romeo.lts.1994@gmail.com">romeo.lts.1994@gmail.com</a>
 
     </footer>
   </body>
