--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="files/user.jpg" width="928" height="536" alt="Фотография Романа">
+        <img src="files/roman.jpg" width="600" height="536" alt="Фотография Романа">
       </figure>
       <h3>Учюсь верстать</h3>
       <p>Сижу на карантине, изучаю новую для себя професию.</p>
